# starknet-rpc-tests

./: .dockerignore  .gitignore  .tool-versions  Cargo.toml  README.md  Scarb.toml  data.json  devnet_state.json  devnet_state_onexit.json  katana-runner.dockerfile  openrpc-runner.yaml  package.json  runner.dockerfile  snfoundry.toml  test.dockerfile  test2.dockerfile
b11r/: Cargo.toml  README.md
b11r/src/: args.rs  lib.rs  main.rs  utils.rs
b11r/src/block_build/: block.rs  errors.rs  mod.rs
b11r/testdata/: block.json  block_v2.json  block_v3.json  header.json  header_v2.json  state.json  state_diff.json  transaction_receipts.json  txs.json
checker/: Cargo.toml  README.md
checker/assets/: load_path.json
checker/src/: args.rs  main.rs  tests_traits.rs
checker/src/v6/: mod.rs
checker/src/v7/: mod.rs
crypto-utils/: Cargo.toml
crypto-utils/src/: lib.rs
crypto-utils/src/curve/: signer.rs
crypto-utils/src/hash/: mod.rs  pedersen.rs  poseidon_hash.rs  traits.rs
hive/: Cargo.toml
hive/src/: args.rs  main.rs
openrpc-minimal/: Cargo.toml
openrpc-minimal/src/: main.rs
openrpc-testgen/: Cargo.toml  build.rs  readme.md
openrpc-testgen-runner/: Cargo.toml
openrpc-testgen-runner/src/: args.rs  main.rs
openrpc-testgen/src/: args.rs  lib.rs  main.rs
openrpc-testgen/src/common/: mod.rs  test_add_declare_v2.rs  test_add_declare_v3.rs  test_add_declare_v4.rs
openrpc-testgen/src/katana/: mod.rs
openrpc-testgen/src/macros/: assert_account_starknet_err.rs  assert_eq_result.rs  assert_matches_result.rs  assert_no_panic.rs  assert_provider_starknet_err.rs  assert_result.rs  errors.rs  macros_errors.rs  mod.rs
openrpc-testgen/src/madara/: mod.rs  test_add_declare_v2.rs  test_add_declare_v4.rs
openrpc-testgen/src/structs/: mod.rs
openrpc-testgen/src/suite_common/: mod.rs  test_add_declare_v2.rs  test_add_declare_v3.rs  test_add_declare_v4.rs
openrpc-testgen/src/suite_katana/: declaring_already_existing_class.rs  mod.rs  test_add_declare_v2.rs  test_add_declare_v3.rs  test_add_declare_v4.rs  test_concurrent_transactions_submissions.rs  test_declare_and_deploy_contract.rs  test_declaring_already_existing_class.rs  test_deploy_accout.rs  test_ensure_validator_have_valid_state.rs  test_estimate_fee.rs  test_get_blocks_from_hash.rs  test_send_txs_with_insufficient_fee.rs  test_send_txs_with_invalid_nonces.rs  test_send_txs_with_invalid_signature.rs  test_v3_transactions.rs
openrpc-testgen/src/suite_katana_dev/: mod.rs  test_block_traces.rs  test_trace.rs
openrpc-testgen/src/suite_katana_no_account_validation/: mod.rs  test_send_txs_with_invalid_signature.rs
openrpc-testgen/src/suite_katana_no_fee/: mod.rs  test_deploy_account.rs  test_send_txs_with_insufficient_fee.rs
openrpc-testgen/src/suite_katana_no_mining/: mod.rs  test_block_traces.rs  test_get_events_no_pending.rs  test_get_events_with_pending.rs  test_trace.rs
openrpc-testgen/src/suite_katana_specific/: mod.rs  test_add_declare_v2.rs  test_add_declare_v3.rs  test_add_declare_v4.rs
openrpc-testgen/src/suite_madara/: mod.rs  test_add_declare_v2.rs  test_add_declare_v3.rs  test_add_declare_v4.rs
openrpc-testgen/src/suite_openrpc/: mod.rs  test_call_contract.rs  test_declare_txn_v2.rs  test_declare_txn_v3.rs  test_deploy_account_outside_execution.rs  test_erc20_transfer.rs  test_estimate_message_fee.rs  test_get_block_number.rs  test_get_block_txn_count.rs  test_get_block_with_tx_hashes.rs  test_get_block_with_txs.rs  test_get_chain_id.rs  test_get_state_update.rs  test_get_storage_at.rs  test_get_transaction_by_hash.rs  test_get_transaction_by_hash_non_existent.rs  test_get_txn_by_block_id_and_index.rs  test_get_txn_by_block_id_and_index_declare_v2.rs  test_get_txn_by_block_id_and_index_declare_v3.rs  test_get_txn_by_block_id_and_index_deploy_account_v1.rs  test_get_txn_by_block_id_and_index_deploy_account_v3.rs  test_invoke_contract_v1.rs  test_invoke_contract_v3.rs  test_invoke_txn_v1.rs  test_invoke_txn_v3.rs
openrpc-testgen/src/utils/: mod.rs  random_single_owner_account.rs
production-nodes-types/: Cargo.toml
production-nodes-types/src/: lib.rs
production-nodes-types/src/pathfinder_types/: mod.rs
proxy/: Cargo.toml  Dockerfile  README.md
proxy-testgen/: Cargo.toml  build.rs
proxy-testgen/src/: lib.rs
proxy-testgen/src/state_machines/: add_transaction_state_machine.rs  block_number_state_machine.rs  mod.rs  state_update_block_number_state_machine.rs  state_update_pending_state_machine.rs
proxy/alpha-sepolia-certs/: ca.key  server.crt  server.pem
proxy/juno/: Dockerfile  ca.crt
proxy/madara/: Dockerfile
proxy/papyrus/: Dockerfile
proxy/pathfinder/: Dockerfile
proxy/src/: main.rs
proxy/src/core/: errors.rs  utils.rs
proxy/src/test_cases/: mod.rs  state_machines.rs
runner/: Cargo.toml
runner/serde/: mod.rs  num_hex.rs
runner/src/: args.rs  call.rs  declare.rs  deploy.rs  errors.rs  main.rs  starknet_add_declare_transaction.rs  starknet_block_number.rs  starknet_chain_id.rs  starknet_estimate_fee.rs  starknet_get_nonce.rs
runner/src/tests/: mod.rs  rpc.rs  tests.rs
runner/src/transports/: http.rs  mod.rs
runner/src/utils/: accounts.rs  byte_array.rs  codegen.rs  crypto.rs  mod.rs  provider.rs  serde_impls.rs  transaction_request.rs  unsigned_field_element.rs  utils.rs
runner/tests/: runner.rs
shared/: Cargo.toml
shared/src/: account_balance.rs  config.rs  create_acc.rs  create_acc_2.rs  create_account.rs  deploy_acc.rs  errors.rs  lib.rs  mint.rs  serialize_felt_to_hex.rs
shared/src/clients/: devnet_client.rs  mod.rs
t8n/: Cargo.toml  README.md  readme.md
t8n/src/: args.rs  main.rs  utils.rs
t8n/src/accounts_artifacts/: ERC20_Mintable_OZ_0.2.0.json  ERC20_Mintable_OZ_0.8.1.json  UDC_OZ_0.5.0.json
t8n/src/starknet/: mod.rs
t9n/: Cargo.toml  README.md
t9n/examples/declare/: README.md  declare_txn_v2.json  declare_txn_v3.json
t9n/examples/deploy_acc/: README.md  (+2 more)
t9n/src/: args.rs  lib.rs  main.rs
v0-0-6/: Cargo.toml
v0-0-6/src/: account_balance.rs  lib.rs  single_owner.rs
versions/: Cargo.toml
versions/src/: lib.rs  main.rs
(+618 files in other folders)
