[workspace]
resolver = "2"
members = [
  "checker",
  "t8n",
  "t9n",
  "b11r",
  "crypto-utils",
  "openrpc-checker",
  "hive",
  "proxy",
  "proxy-testgen", "production-nodes-types",
]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
auto_impl = "1.2.0"
clap = { version = "4.5.16", features = ["derive", "env"] }
clap_derive = "4.5.13"
colored = "2.1.0"
crypto-bigint = "0.5.5"
crypto-utils = { path = "./crypto-utils" }
lambdaworks-math = { version = "0.7.0", default-features = false }
num-bigint = { version = "0.4", features = ["serde"], default-features = false }
openrpc-checker = { path = "./openrpc-checker" }
pathfinder-types = { git = "https://github.com/neotheprogramist/types-rs.git", rev = "db8788d1ab136846995038744445c50e5580f7ad" }
rand = "0.8.5"
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["json", "blocking"] }
serde = { version = "1.0.209", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.127", default-features = false, features = [
  "alloc",
  "raw_value",
  "std",
] }
serde_json_pythonic = "0.1.2"
serde_with = "3.9.0"
sha3 = "0.10.8"
starknet-devnet-types = { git = "https://github.com/neotheprogramist/starknet-devnet-rs.git", branch = "feat/add-deserialization-serialization" }
starknet-types-core = { git = "https://github.com/neotheprogramist/types-rs.git", rev = "db8788d1ab136846995038744445c50e5580f7ad" }
starknet-types-rpc = { git = "https://github.com/neotheprogramist/types-rs.git", rev = "db8788d1ab136846995038744445c50e5580f7ad" }
thiserror = "1.0.63"
tokio = { version = "1.39.3", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.2"
