[package]
name = "b11r"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0"
clap.workspace = true
hex = "0.4.3"
pathfinder-types.workspace = true
serde_json.workspace = true
serde.workspace = true
sha3.workspace = true
starknet-devnet-types.workspace = true
starknet-types-core.workspace = true
starknet-types-rpc.workspace = true
thiserror.workspace = true
tracing.workspace = true
