[package]
name = "checker"
edition.workspace = true
version.workspace = true

[dependencies]
auto_impl.workspace = true
clap.workspace = true
clap_derive.workspace = true
colored.workspace = true
crypto-bigint.workspace = true
lambdaworks-math.workspace = true
rand.workspace = true
regex.workspace = true
reqwest.workspace = true
serde_json_pythonic.workspace = true
serde_json.workspace = true
serde_with.workspace = true
serde.workspace = true
sha3.workspace = true
starknet-types-core.workspace = true
starknet-types-rpc.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true
