[package]
name = "checker"
edition.workspace = true
version.workspace = true

[dependencies]
auto_impl.workspace = true
clap_derive.workspace = true
clap.workspace = true
colored.workspace = true
crypto-bigint.workspace = true
lambdaworks-math.workspace = true
rand.workspace = true
regex.workspace = true
reqwest.workspace = true
serde_json_pythonic.workspace = true
serde_json.workspace = true
serde_with.workspace = true
serde.workspace = true
sha3.workspace = true
# starknet-types-core = { git = "https://github.com/neotheprogramist/types-rs.git", rev = "6fd7f8905bebb8a671950a9b5d50a0543c0cb1a5" }
# starknet-types-rpc = { git = "https://github.com/neotheprogramist/types-rs.git", rev = "6fd7f8905bebb8a671950a9b5d50a0543c0cb1a5" }
starknet-types-core = { path = "/home/filipg/dev/starknet-proposal/types-rs/crates/starknet-types-core" }
starknet-types-rpc = { path = "/home/filipg/dev/starknet-proposal/types-rs/crates/starknet-types-rpc" }
thiserror.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true
crypto-utils.workspace = true
