[package]
name = "crypto-utils"
edition.workspace = true
version.workspace = true

[dependencies]
crypto-bigint = { version = "0.5.5", default-features = false, features = [
  "generic-array",
  "zeroize",
] }
hmac = { version = "0.12.1", default-features = false }
lambdaworks-math = { version = "0.7.0", default-features = false }
num-traits = { version = "0.2.18", default-features = false }
num-bigint = { version = "0.4.4", default-features = false }
num-integer = { version = "0.1.45", default-features = false }
rfc6979 = "0.4.0"
sha2 = "0.10.8"
zeroize = "1.8.1"
starknet-types-core.workspace = true

[features]
default = ["std"]
std = [
  "lambdaworks-math/std",
  "num-traits/std",
  "num-bigint/std",
  "num-integer/std",
]
