[package]
name = "hive"
edition.workspace = true
version.workspace = true

[dependencies]
clap_derive.workspace = true
clap.workspace = true
colored.workspace = true
openrpc-checker.workspace = true
starknet-types-core.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true
