[package]
name = "openrpc-minimal"
edition.workspace = true
version.workspace = true


[dependencies]
clap.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true
starknet-types-core.workspace = true
tokio.workspace = true
openrpc-testgen = { path = "../openrpc-testgen" }
starknet-types-rpc.workspace = true
rand.workspace = true
serde.workspace = true
