[package]
name = "openrpc-testgen"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
assert_matches.workspace = true
auto_impl.workspace = true
cainome-cairo-serde-derive.workspace = true
cainome-cairo-serde.workspace = true
cainome.workspace = true
cairo-lang-starknet-classes.workspace = true
clap.workspace = true
colored.workspace = true
crypto-bigint.workspace = true
crypto-utils.workspace = true
indexmap.workspace = true
lambdaworks-math.workspace = true
num-bigint.workspace = true
rand.workspace = true
regex.workspace = true
reqwest.workspace = true
serde_json_pythonic.workspace = true
serde_json.workspace = true
serde_with.workspace = true
serde.workspace = true
sha3.workspace = true
starknet-types-core.workspace = true
starknet-types-rpc.workspace = true
starknet.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true

[features]
no_unknown_fields = []
rust-analyzer = []
katana = []
katana_no_fee = []
katana_no_account_validation = []
katana_no_mining = []
openrpc = []
