[package]
name = "production-nodes-types"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.75"
blockifier = { git = "https://github.com/neotheprogramist/blockifier.git", branch = "feat/add-deserialization-serialization", features = [
  "testing",
] }
bincode = "2.0.0-rc.3"
bitvec = "1.0.1"
fake = { version = "2.8.0", features = ["derive"] }
indexmap = "2.3.0"
num-bigint = "0.4.4"
rayon = "1.8.0"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1.0.127"
serde_with = "3.9.0"
sha3 = "0.10"
starknet-devnet-types = { git = "https://github.com/neotheprogramist/starknet-devnet-rs.git", branch = "feat/add-deserialization-serialization" }
starknet-types-rpc = { git = "https://github.com/neotheprogramist/types-rs.git", rev = "70bd8ad21c702abb51a7598ef4aab8064cf8eec0" }
starknet-types-core = { version = "0.1.6", default-features = false, features = [
  "hash",
  "curve",
] }
rand = "0.8.5"
primitive-types = { version = "0.12.1", features = ["serde"] }
