[package]
name = "proxy-testgen"
edition.workspace = true
version.workspace = true
build = "build.rs"

[dependencies]
colored.workspace = true
num-bigint = "0.4.6"
num-traits = "0.2.19"
production-nodes-types = { path = "../production-nodes-types" }
regex = "1.11.1"
serde_json.workspace = true
serde_with.workspace = true
serde.workspace = true
starknet-types-core.workspace = true
starknet-types-rpc.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing.workspace = true
