[package]
name = "proxy"
edition.workspace = true
version.workspace = true

[dependencies]
axum = "0.7.7"
axum-server = { version = "0.7", features = ["tls-rustls"] }
clap = { version = "4.0", features = ["derive"] }
colored.workspace = true
openssl = { version = "0.10.66", features = ["vendored"] }
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
rustls = "0.20"
rustls-pemfile = { version = "2.2.0", features = ["std"] }
thiserror = "1.0.63"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.23"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5.2"
x509-parser = { version = "0.15.1", features = ["verify"] }
starknet-types-rpc = { git = "https://github.com/neotheprogramist/types-rs.git", rev = "70bd8ad21c702abb51a7598ef4aab8064cf8eec0" }
starknet-types-core = { version = "0.1.6", default-features = false, features = [
  "hash",
  "curve",
] }
regex = "1.11.1"
serde_json.workspace = true
serde.workspace = true
proxy-testgen = { path = "../proxy-testgen" }

[features]
no_unknown_fields = []
rust-analyzer = []
