[package]
name = "runner"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest.workspace = true
tokio.workspace = true
serde_json.workspace = true
url.workspace = true
regex.workspace = true
thiserror.workspace = true
clap.workspace = true
serde.workspace = true
serde_with.workspace = true
hex-literal.workspace = true
tracing.workspace = true
base64.workspace = true
async-trait.workspace = true
auto_impl.workspace = true
log.workspace = true
starknet-crypto.workspace = true
serde_json_pythonic.workspace = true
starknet-signers.workspace = true
sha3.workspace = true
