[package]
name = "runner"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
auto_impl.workspace = true
base64.workspace = true
clap.workspace = true
hex-literal.workspace = true
log.workspace = true
regex.workspace = true
reqwest.workspace = true
serde_json_pythonic.workspace = true
serde_json.workspace = true
serde_with.workspace = true
serde.workspace = true
sha3.workspace = true
shared = { path = "../shared" }
starknet-crypto.workspace = true
starknet-signers.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
