[package]
name = "shared"
version.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
colored.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_urlencoded.workspace = true
serde_json.workspace = true
tokio.workspace = true
url.workspace = true
tracing.workspace = true
v0-0-5 = { path = "../v0-0-5" }
v0-0-6 = { path = "../v0-0-6" }
starknet-crypto.workspace = true
prefix-hex.workspace = true
utils = { path = "../utils" }
thiserror.workspace = true
