[package]
name = "t8n"
edition.workspace = true
version.workspace = true

[dependencies]
blockifier = { git = "https://github.com/neotheprogramist/blockifier.git", branch = "feat/add-deserialization-serialization", features = [
  "testing",
] }
cairo-lang-casm = "=2.6.0"
cairo-lang-compiler = "=2.6.0"
cairo-lang-defs = "=2.6.0"
cairo-lang-diagnostics = "=2.6.0"
cairo-lang-filesystem = "=2.6.0"
cairo-lang-lowering = "=2.6.0"
cairo-lang-semantic = "=2.6.0"
cairo-lang-sierra = "=2.6.0"
cairo-lang-sierra-generator = "=2.6.0"
cairo-lang-sierra-to-casm = "=2.6.0"
cairo-lang-starknet-classes = { version = "=2.6.0", package = "cairo-lang-starknet-classes" }
cairo-lang-syntax = "=2.6.0"
cairo-lang-utils = "=2.6.0"
clap.workspace = true
ethers = "2.0.14"
hex = "0.4.3"
indexmap = "2.3.0"
k256 = "0.13.3"
nonzero_ext = "0.3.0"
rand_mt = "4.2.2"
rand.workspace = true
reqwest.workspace = true
serde_json.workspace = true
serde_with.workspace = true
serde.workspace = true
starknet_api = { version = "0.10.0", features = ["testing"] }
starknet-devnet-types.workspace = true
starknet-rs-core = { version = "0.10.0", package = "starknet-core" }
starknet-rs-signers = { version = "0.8.0", package = "starknet-signers" }
thiserror.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true
usc = { version = "2.1.0", package = "universal-sierra-compiler" }
