[package]
name = "t9n"
edition.workspace = true
version.workspace = true

[dependencies]
clap.workspace = true
serde_json.workspace = true
serde.workspace = true
sha3.workspace = true
starknet-types-core.workspace = true
starknet-types-rpc.workspace = true
thiserror.workspace = true
crypto-utils.workspace = true
